--- a/demoChart/values.yaml
+++ b/demoChart/values.yaml
@@ -11,7 +11,7 @@ image:
   tag: ""
 
 imagePullSecrets: []
-nameOverride: ""
+nameOverride: "demo-project"
 fullnameOverride: ""
 
 serviceAccount:
@@ -21,7 +21,7 @@ serviceAccount:
   annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: "serviceaccount"
+  name: ""
 
 podAnnotations: {}
 
