--- a/demoChart/templates/deployment.yaml
+++ b/demoChart/templates/deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "demoChart.fullname" . }}
+  name: {{ include "demochart.fullname" . }}
   labels:
-    {{- include "demoChart.labels" . | nindent 4 }}
+    {{- include "demochart.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
