--- a/demoChart/values.yaml
+++ b/demoChart/values.yaml
@@ -11,7 +11,7 @@ image:
   tag: ""
 
 imagePullSecrets: []
-nameOverride: "demo"
+nameOverride: "demo-helm"
 fullnameOverride: ""
 
 serviceAccount:
