--- a/demoChart/values.yaml
+++ b/demoChart/values.yaml
@@ -11,7 +11,7 @@ image:
   tag: ""
 
 imagePullSecrets: []
-nameOverride: "demo-k8s"
+nameOverride: "demok8s"
 fullnameOverride: ""
 
 serviceAccount:
